--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxoalWF9Vfu5Gdft+KOiS5",
+      "authorship_tag": "ABX9TyPgH3lCgH5bjbRgtCuj8dBR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,64 +223,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Rock - Paper - Scissors"
-      ],
-      "metadata": {
-        "id": "QXWfUEAa5P4H"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "play = input(\"Do you want to play a game? (yes/no) \")\n",
-        "\n",
-        "while play == \"yes\":\n",
-        "  player_1 = input(\"Player 1, please enter your name: \")\n",
-        "  player_2 = input(\"Player 2, please enter your name: \")\n",
-        "  p1 = input(player_1 + \", please enter rock, paper, or scissors: \")\n",
-        "  p2 = input(player_2 + \", please enter rock, paper, or scissors: \")\n",
-        "\n",
-        "  if p1 == p2:\n",
-        "    print(\"It's a tie!\")\n",
-        "  elif ((p1 == \"rock\" and p2 == \"scissors\")\n",
-        "  or (p1 == \"paper\" and p2 == \"rock\")\n",
-        "  or (p1 == \"scissors\" and p2 == \"paper\")):\n",
-        "    print(player_1, \"wins!\")\n",
-        "  else:\n",
-        "    print(player_2, \"wins!\")\n",
-        "\n",
-        "  play = input(\"Do you want to play again? (yes/no)\")\n",
-        "\n",
-        "print(\"Thanks for playing!\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ub0RFoij9B5b",
-        "outputId": "83bea523-2194-4924-aa2d-6dd598e012d5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Do you want to play a game? (yes/no) yes\n",
-            "Player 1, please enter your name: s\n",
-            "Player 2, please enter your name: v\n",
-            "s, please enter rock, paper, or scissors: rock\n",
-            "v, please enter rock, paper, or scissors: scissors\n",
-            "s wins!\n",
-            "Do you want to play again? (yes/no)no\n",
-            "Thanks for playing!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Rock - Paper - Scissors: Play against computer."
       ],
       "metadata": {
@@ -351,7 +293,7 @@
         "list = []\n",
         "number = float(input(\"Please enter a number, to stop enter 0. \"))\n",
         "\n",
-        "while number != 0.0:\n",
+        "while number != 0.0:4\n",
         "  list.append(number)\n",
         "  number = float(input(\"Please enter a number, to stop enter 0. \"))\n",
         "list.sort(reverse=True)\n",
@@ -362,20 +304,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TaRSJ_dfQBBP",
-        "outputId": "fe6359ae-511a-412e-e948-53ba16be383b"
+        "outputId": "efc6ec19-9734-437d-b5d9-4bea175d2af3"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Please enter a number, to stop enter 0. 1\n",
-            "Please enter a number, to stop enter 0. 2\n",
+            "Please enter a number, to stop enter 0. 5\n",
+            "Please enter a number, to stop enter 0. 3\n",
+            "Please enter a number, to stop enter 0. 3\n",
+            "Please enter a number, to stop enter 0. 3\n",
             "Please enter a number, to stop enter 0. 3\n",
             "Please enter a number, to stop enter 0. 4\n",
+            "Please enter a number, to stop enter 0. 5\n",
+            "Please enter a number, to stop enter 0. 6\n",
+            "Please enter a number, to stop enter 0. 4\n",
             "Please enter a number, to stop enter 0. 0\n",
-            "[4.0, 3.0, 2.0, 1.0]\n"
+            "[6.0, 5.0, 5.0, 4.0, 4.0, 3.0, 3.0, 3.0, 3.0]\n"
           ]
         }
       ]
@@ -388,50 +335,6 @@
       "metadata": {
         "id": "mvbAvJNV3DFO"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "months = {}\n",
-        "\n",
-        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
-        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
-        "\n",
-        "for idx in range(len(names)):\n",
-        "  months[numbers[idx]] = names[idx]\n",
-        "months\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9EPqF_Wgx95d",
-        "outputId": "c9ce9182-d62b-4bf8-9042-e7366d59ee70"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{1: 'Jan',\n",
-              " 2: 'Feb',\n",
-              " 3: 'Mar',\n",
-              " 4: 'Apr',\n",
-              " 5: 'May',\n",
-              " 6: 'Jun',\n",
-              " 7: 'Jul',\n",
-              " 8: 'Aug',\n",
-              " 9: 'Sep',\n",
-              " 10: 'Oct',\n",
-              " 11: 'Nov',\n",
-              " 12: 'Dec'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -586,39 +489,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#f ('abc') -> cba\n",
-        "def fibR (n):\n",
-        "  if n > 1: #inductive case\n",
-        "    return fibR(n-1) +fibR(n-2)\n",
-        "  else:\n",
-        "      return 1\n",
-        "\n",
-        "fibR(5)"
-      ],
-      "metadata": {
-        "id": "fTEXNX9rNDJg",
-        "outputId": "5263688a-f5f4-4f1d-b2c8-0db472bb1cee",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "8"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Recursive function: string reversal"
@@ -717,6 +587,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def getValues(n):\n",
+        "  L = []\n",
+        "  for i in range(n):\n",
+        "    weight = float(input('Enter weight: '))\n",
+        "    L.append(weight)\n",
+        "  return L\n",
+        "\n",
+        "def calcAverage(alist):\n",
+        "  try:\n",
+        "    print(f'The average weight is {sum(alist[2:]) / len(alist[2:])} lbs.')\n",
+        "  except ZeroDivisionError:\n",
+        "    print('List alist  is empty!')\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  try:\n",
+        "    n = int(input('Enter size of list: '))\n",
+        "    alist = getValues(n)\n",
+        "    calcAverage(alist)\n",
+        "  except ValueError:\n",
+        "    print('Cannot cast to int().')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ivnScqo1laPf",
+        "outputId": "a1e51c5c-f45f-4a7b-f1db-79c2a6feca69"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter size of list: 0\n",
+            "List alist  is empty!\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Greeting class"
@@ -724,38 +637,6 @@
       "metadata": {
         "id": "bHzZD1vHg1ZC"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Greeting:\n",
-        " def __init__(self,first,last):\n",
-        "  self.first = first\n",
-        "  self.last = last\n",
-        " def display(self):\n",
-        "  print(f' Hi {self.first}')\n",
-        "\n",
-        "greeting = Greeting('Donald', 'Becker')\n",
-        "greeting.display()\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6-UIj6UJYCWl",
-        "outputId": "1a186bfe-7b22-4d94-ae76-5fc4342339fb"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " Hi Donald\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -814,48 +695,64 @@
       "cell_type": "code",
       "source": [
         "class Student:\n",
-        "    def __init__(self, name, number):\n",
-        "        self.name = name\n",
-        "        self.number = number\n",
-        "        self.courses = []\n",
-        "    def enroll(self, course):\n",
-        "        if course in self.courses:\n",
-        "            print(f'You have already enrolled in{course}')\n",
-        "        else:\n",
-        "            self.courses.append(course)\n",
-        "    def get_courses(self):\n",
-        "        return self.courses"
-      ],
-      "metadata": {
-        "id": "slQakTd-heW6"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s1 = Student('Bob', 100)\n",
-        "s2 = Student('Alice', 101)\n",
+        "  def __init__(self, name, number):\n",
+        "    self.name = name\n",
+        "    self.number = number\n",
+        "    self.courses = []\n",
         "\n",
-        "print (s1.name, s1.number)\n",
-        "print (s2.name, s2.number)"
+        "  def enroll(self,course):\n",
+        "    if course in self.courses:\n",
+        "      print(f'You have already enrolled in {course}')\n",
+        "    else:\n",
+        "      self.courses.append(course)\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.courses\n",
+        "\n",
+        "s1 = Student(\"James Bond\", 7)\n",
+        "s2 = Student(\"Clark Kent\", 333)\n",
+        "s1.name, s2.name"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "r7Ozq4SvhsYF",
-        "outputId": "fa5bcb81-6b84-4d0e-ce56-dc871f128200"
+        "id": "uTp5qheelUse",
+        "outputId": "cf53e1d2-3378-4aaf-b91f-ebd094a79049"
       },
-      "execution_count": 3,
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('James Bond', 'Clark Kent')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1.enroll('BTE320')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jpb9WJOml8RV",
+        "outputId": "b4a976f4-74c7-4ecb-e23a-6647708fecd0"
+      },
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Bob 100\n",
-            "Alice 101\n"
+            "You have already enrolled in BTE320\n"
           ]
         }
       ]
